--- a/defense-p0-intro.tex
+++ b/defense-p0-intro.tex
@@ -3,7 +3,7 @@
 % overview of manipulation planning problem?
 \begin{frame}
    \frametitle{Autonomous Manipulation Tasks}
-   \begin{tikzpicture}
+   \begin{tikzpicture}[font=\small]
       \tikzset{>=latex} % arrow heads
       \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
    
@@ -15,23 +15,94 @@
       \node at (10,2.4) {CHIMP};
       
       \only<2->{
-      \node[fill=blue!20,rounded corners,align=center,minimum height=1.5cm,align=center]
-         (sense) at (2,0.85) {Sense\\(build geometric\\world model)};
+      \node[draw,align=center,minimum height=0.8cm,align=center,shape=document,font=\footnotesize]
+         (sense) at (2,0.85) {Geometric\\world model};
       }
 
       \only<3->{
-      \node[fill=blue!20,rounded corners,align=center,minimum height=1.5cm,align=center]
-         (plan) at (6,0.85) {Plan\\(motion plans)};
+      \node[fill=blue!10,draw=blue!20!black,rounded corners,align=center,minimum height=1.5cm,minimum width=1.8cm,align=center]
+         (plan) at (5,0.85) {Motion\\Planning};
       \draw[->,line width=1pt] (sense) -- (plan);
       }
 
       \only<4->{
-      \node[fill=blue!20,rounded corners,align=center,minimum height=1.5cm,align=center]
-         (act) at (10,0.85) {Act\\(execute\\motion plans)};
-      \draw[->,line width=1pt] (plan) -- (act);
+      \node[draw,align=center,minimum height=0.8cm,align=center,shape=document,font=\footnotesize]
+         (path) at (7.5,0.85) {Path};
+      \draw[->,line width=1pt] (plan) -- (path);
+      }
+
+      \only<5->{
+      \node[fill=blue!10,draw=blue!40!black,rounded corners,align=center,minimum height=1.5cm,minimum width=1.8cm,align=center]
+         (act) at (10,0.85) {Execution};
+      \draw[->,line width=1pt] (path) -- (act);
       }
    
    \end{tikzpicture}
+\end{frame}
+
+\begin{frame}
+   \frametitle{Example Manipulation Tasks}
+   \begin{tikzpicture}[font=\small]
+      \tikzset{>=latex} % arrow heads
+      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+
+      \fill[black!80] (0.1,3.0) rectangle (11.9,6.6);
+
+      \node[fill=black,inner sep=0pt] (chimp-trials-debris-fast) at (3.1,4.8) {%
+         \href{\tikzvidtarget{chimp-trials-debris-fast}}{%
+         \includegraphics[width=5.333333cm]{videos/chimp-trials-debris-fast.png}}};
+      \tikzvidplayat{chimp-trials-debris-fast}{chimp-trials-debris-fast}{videos/chimp-trials-debris-fast.mp4}{-loop 0}
+
+      \node[fill=black,inner sep=0pt] (herb-tableclear-2-fast) at (8.9,4.8) {%
+         \href{\tikzvidtarget{herb-tableclear-2-fast}}{%
+         \includegraphics[width=5.333333cm]{videos/herb-tableclear-2-fast.png}}};
+      \tikzvidplayat{herb-tableclear-2-fast}{herb-tableclear-2-fast}{videos/herb-tableclear-2-fast.mp4}{-loop 0}
+
+      \tikzvidtargetboth{examples-fast}{chimp-trials-debris-fast}{herb-tableclear-2-fast}
+      
+      \node at (5.5,2.7) {10x};
+      \node at (11.2,2.7) {10x};
+
+      %\node[fill=black,inner sep=1pt] at (3,6.3) {
+      %   \movie[width=5.333333cm,height=3.00cm,
+      %      loop,autostart]{}{chimp-trials-debris-fast.mp4}
+      %};
+      
+      %\node[fill=black,inner sep=1pt] at (9,6.3) {
+      %   \movie[width=5.333333cm,height=3.00cm,
+      %      loop,autostart]{}{herb-tableclear-2-fast.mp4}
+      %};
+      
+      %\node[fill=black,minimum width=4cm, minimum height=3cm,text=white] at (3,3.2) {
+      %   ARM-S Example?
+      %};
+      
+      %\node[fill=black,minimum width=4cm, minimum height=3cm,text=white] at (9,3.2) {
+      %   Other (PR-2) Example?
+      %};
+   
+      %\hyperlinkmovie[play]{mylabel}{play}
+
+      \node[draw,align=center,minimum height=0.8cm,align=center,shape=document,font=\footnotesize]
+         (sense) at (2,0.85) {Geometric\\world model};
+      
+      \node[fill=blue!10,draw=blue!20!black,rounded corners,align=center,minimum height=1.5cm,minimum width=1.8cm,align=center]
+         (plan) at (5,0.85) {Motion\\Planning};
+      \draw[->,line width=1pt] (sense) -- (plan);
+
+      \node[draw,align=center,minimum height=0.8cm,align=center,shape=document,font=\footnotesize]
+         (path) at (7.5,0.85) {Path};
+      \draw[->,line width=1pt] (plan) -- (path);
+
+      \node[fill=blue!10,draw=blue!40!black,rounded corners,align=center,minimum height=1.5cm,minimum width=1.8cm,align=center]
+         (act) at (10,0.85) {Execution};
+      \draw[->,line width=1pt] (path) -- (act);
+
+   \end{tikzpicture}%
+   \begin{tikzpicture}[remember picture,overlay]
+      \node[anchor=south west,fill=black!10,inner sep=0pt] at (current page.south west)
+      {\href{\tikzvidtarget{examples-fast}}{\tikz{\node[minimum width=2cm,minimum height=0.3cm]{}}}};
+   \end{tikzpicture}%
 \end{frame}
 
 \begin{frame}
@@ -182,29 +253,29 @@
       There is an {\bf explicit cost tradeoff} between
       \emph{planning motion} and \emph{executing it}.
 
-      \medskip
-      (Often comparable time and energy)
-      
       \only<3->{
       \medskip
-      Existing methods require parameters
-      that are often difficult to tune:
-      \begin{itemize}[leftmargin=*,itemsep=0pt,topsep=2pt]
-      \item planning/shortcutting budgets
-      \item inflation factors
-      \end{itemize}
+      Planning and execution often entail\\
+      comparable time and energy.
       }
 
       \only<4->{
       \medskip
-      Anytime planners require a learned
-      termination condition and may not achieve the best tradeoff.
+      In general, more planning time usually yields
+      better paths, but:
+      }
+      \only<5->{
+      \begin{itemize}
+      \item parameters are difficult to tune,
+      \only<6->{\item it's unclear when to terminate, and}
+      \only<7->{\item they don't know about the tradeoff.}
+      \end{itemize}
       }
       
    \end{minipage}};
    }
 
-   \only<1-4>{
+   \only<1-7>{
    % figure adapted from proposal doc
    \begin{scope}[font=\scriptsize,shift={(1.5,1.5)}]
        
@@ -283,7 +354,7 @@
    \end{scope}
    }
 
-   \only<5>{
+   \only<8>{
       \node[fill=blue!15,rounded corners,font=\small] at (6,1.75)
       {\begin{minipage}{11cm}\large
 
