--- a/defense-p3-ibid.tex
+++ b/defense-p3-ibid.tex
@@ -340,7 +340,7 @@
       \tikzset{>=latex} % arrow heads
       \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
-      \node[fill=blue!10,minimum width=7cm,minimum height=2.67361cm,align=center] at (4,5.95) {
+      \node[fill=blue!10,draw=blue!25,rounded corners,minimum width=7cm,minimum height=1.5cm,align=center] at (4,5.95) {
          Problem:\\
          Dynamic Single-Pair Shortest Path (SPSP)\\
       };
@@ -472,63 +472,67 @@
    \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
       % top
-      \only<17->{
+      \only<18->{
          \node[fill=black!5,minimum width=5.75cm] at (3,7.5) {\strut Non-Incremental Search};
       }
-      \only<18->{
+      \only<19->{
          \node[fill=black!5,minimum width=5.75cm] at (9,7.5) {\strut Incremental Search};
       }
 
       % middle
 
-      \only<1-18>{
+      \only<1-19>{
          \node[circle,align=center,fill=green!10,draw=green!50!black,inner sep=0pt,minimum width=0.5cm] (wa) at (6.0,6.8) {$w$};
+         \only<3> {
+            \node[anchor=north,fill=black!5,draw=black!15,rounded corners] at (6.0,5.5) {%
+               \includegraphics[width=3.5cm]{figs/incbi-road-ne/singleshot/example-dijkstraall.png}};
+         }
          \only<2->{
             \node[circle,fill=blue!10,draw=blue!20,densely dashed,inner sep=0pt,minimum width=0.6cm] (dstara) at (6.0,6.0) {\strut $d^*$};
             \draw[->] (wa) -- (dstara);
          }
       }
-      \only<19->{
+      \only<20->{
          \node[circle,align=center,fill=green!10,draw=green!50!black,inner sep=0pt,minimum width=0.5cm] (wa) at (6.0,6.8) {$w_a$};
          \node[circle,fill=blue!10,draw=blue!20,densely dashed,inner sep=0pt,minimum width=0.6cm] (dstar1) at (6.0,6.0) {\strut $d^*_a$};
          \draw[->] (wa) -- (dstara);
       }
-      \only<20->{
+      \only<21->{
          \node[circle,align=center,fill=green!10,draw=green!50!black,inner sep=0pt,minimum width=0.5cm] (wb) at (6.0,4.8) {$w_b$};
          \node[circle,fill=blue!10,draw=blue!20,densely dashed,inner sep=0pt,minimum width=0.6cm] (dstarb) at (6.0,4.0) {\strut $d^*_b$};
          \draw[->] (wb) -- (dstarb);
       }
 
       % left side
-      \only<3->{
+      \only<4->{
          \node[circle,fill=blue!10,draw=blue!20,inner sep=0pt,minimum width=0.6cm] (ld1) at (2.5,6.0) {\strut $d_1$};
       }
 
-      \only<4->{
+      \only<5->{
          \node[align=center,fill=green!10,draw=green!50!black,rounded corners,anchor=west] (er) at (3.2,5.5) {\strut Edge\\\strut Relaxation};
          \node[circle,fill=green,draw=green!50!black,inner sep=1.5pt] at (er.west) {};
       }
 
-      \only<5->{
+      \only<6->{
          \draw[->] (wa) -- (4.0,6.8) -- (4.0,6.0);
       }
 
-      \only<6->{
+      \only<7->{
          \node[circle,fill=blue!10,draw=blue!20,inner sep=0pt,minimum width=0.6cm] (ld2) at (2.5,5.0) {\strut $d_2$};
          \draw[->] (ld1) .. controls (3.0,5.6) and (3.0,5.4) .. (ld2) node [midway,circle,fill=green,draw=green!50!black,inner sep=1.5pt] {};
       }
 
-      \only<13->{
+      \only<14->{
          \node[fill=black!5,draw=black!15,rounded corners,align=center,
             anchor=north,minimum width=4.8cm,minimum height=3cm] (lefttrustblock) at (2.5,3.6) {};
       }
-      \only<14->{
+      \only<15->{
          \node[anchor=north west] at (lefttrustblock.north west) {$d \geq d^*$};
       }
-      \only<15->{
+      \only<16->{
          \node[anchor=north east] at (lefttrustblock.north east) {$w \geq 0$};
       }
-      \only<16->{
+      \only<17->{
          \node[anchor=south,align=center,font=\footnotesize] at (lefttrustblock.south)
          {If $D$ is the minimal $d(u)$ among\\
             tensioned edges $e_{uv}$, then any\\
@@ -536,12 +540,12 @@
          \node[fill=white,rounded corners,inner sep=2pt,below=0.1cm of lefttrustblock.north] {\includegraphics[width=2.0cm]{build/ibid-dijkstra-trust-build,wtrust}};
       }
 
-      \only<7->{
+      \only<8->{
          \node[circle,fill=blue!10,draw=blue!20,inner sep=0pt,minimum width=0.6cm] (ld3) at (2.5,4.0) {\strut $d_3$};
          \draw[->] (ld2) .. controls (3.0,4.6) and (3.0,4.4) .. (ld3) node [midway,circle,fill=green,draw=green!50!black,inner sep=1.5pt] {};
       }
 
-      \only<8-11>{
+      \only<9-12>{
          \begin{scope}
             \clip (1,3.5) rectangle (4,4.5);
             \node[circle,fill=blue!10,draw=blue!20,inner sep=0pt,minimum width=0.6cm] (ld4) at (2.5,3.0) {\strut $d_3$};
@@ -549,7 +553,7 @@
          \end{scope}
       }
 
-      \only<9-11>{
+      \only<10-12>{
          \node[circle,fill=blue!10,draw=blue!20,inner sep=0pt,minimum width=0.6cm] (ldn) at (2.5,2.5) {\strut $d_n$};
          \begin{scope}
             \clip (1,2.0) rectangle (4,3.0);
@@ -558,20 +562,20 @@
          \end{scope}
       }
 
-      \only<10->{
+      \only<11->{
          \node[align=center,fill=black!5,draw=black!10,rounded corners] (ifd) at (1.0,6.0) {$d \geq d^*$};
       }
 
-      \only<11>{
+      \only<12>{
          \node[align=center,fill=black!5,draw=black!10,rounded corners] (thend) at (1.0,2.5) {then $d_n\!=\!d^*$};
          \draw[->] (ifd) -- (thend);
       }
 
-      \only<21->{
+      \only<22->{
          \node[align=center,fill=red!30,draw=red!50!black,rounded corners] (ifd) at (1.0,4.0) {$d \ngeq d^*$};
       }
 
-      \only<22->{
+      \only<23->{
          \fill[white,opacity=0.5] (0,0.5) rectangle (5,3.6);
       }
 
@@ -579,31 +583,31 @@
 
       % right side
 
-      \only<23->{
+      \only<24->{
          \node[circle,fill=blue!10,draw=blue!20,inner sep=0pt,minimum width=0.6cm] (rd1) at (9.5,6.0) {\strut $d_1$};
       }
 
-      \only<24->
+      \only<25->
       {
          \node[align=center,fill=green!10,draw=green!50!black,rounded corners,anchor=east] (vc) at (8.8,5.5) {\strut Vertex\\\strut  Consistency};
          \node[circle,fill=green,draw=green!50!black,inner sep=1.5pt] at (vc.east) {};
       }
 
-      \only<25->{
+      \only<26->{
          \draw[->] (wa) -- (8.0,6.8) -- (8.0,6.0);
       }
 
-      \only<26->{
+      \only<27->{
          \node[circle,fill=blue!10,draw=blue!20,inner sep=0pt,minimum width=0.6cm] (rd2) at (9.5,5.0) {\strut $d_2$};
          \draw[->] (rd1) .. controls (9.0,5.6) and (9.0,5.4) .. (rd2) node [midway,circle,fill=green,draw=green!50!black,inner sep=1.5pt] {};
       }
 
-      \only<27->{
+      \only<28->{
          \node[circle,fill=blue!10,draw=blue!20,inner sep=0pt,minimum width=0.6cm] (rd3) at (9.5,4.0) {\strut $d_3$};
          \draw[->] (rd2) .. controls (9.0,4.6) and (9.0,4.4) .. (rd3) node [midway,circle,fill=green,draw=green!50!black,inner sep=1.5pt] {};
       }
 
-      \only<28->{
+      \only<29->{
          \node[fill=black!5,draw=black!15,rounded corners,
             anchor=north,minimum width=4.8cm,minimum height=3cm] (righttrustblock) at (9.5,3.6) {};
          \node[align=center,font=\footnotesize,anchor=south] at (righttrustblock.south)
@@ -1375,57 +1379,57 @@
 \end{frame}
 
 
-\begin{frame}
-   \frametitle{Outline of Selected Algorithms}
-   \begin{tikzpicture}[font=\small]
-      \tikzset{>=latex} % arrow heads
-      \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
+%\begin{frame}
+   %\frametitle{Outline of Selected Algorithms}
+   %\begin{tikzpicture}[font=\small]
+      %\tikzset{>=latex} % arrow heads
+      %\draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
 
-      \node[inner sep=0pt,anchor=north] at (6,7.0) {\begin{minipage}{9.05cm}
-         \begin{tabular}{ccc}
-            \toprule
-            & Non-Incremental & Incremental \\
-            \midrule
-            \addlinespace[0.2em]
-            \strut Unidirectional
-               & Dijkstra's Algorithm
-               & DynamicSWSF-FP \\
-            \addlinespace[-0.2em]
-            \strut \emph{(Heuristic)}
-               & \emph{A*}
-               & \emph{Lifelong Planning A*} \\
-            \addlinespace[0.3em]
-            \strut Bidirectional
-               & Bidirectional Dijkstra
-               & IBiD \\
-            \addlinespace[-0.2em]
-            \strut \emph{(Heuristic)}
-               & \emph{Bidirectional A*}
-               & \emph{Heuristic IBiD} \\
-            \addlinespace[0.2em]
-            \bottomrule
-         \end{tabular}
-      \end{minipage}};
+      %\node[inner sep=0pt,anchor=north] at (6,7.0) {\begin{minipage}{9.05cm}
+         %\begin{tabular}{ccc}
+            %\toprule
+            %& Non-Incremental & Incremental \\
+            %\midrule
+            %\addlinespace[0.2em]
+            %\strut Unidirectional
+               %& Dijkstra's Algorithm
+               %& DynamicSWSF-FP \\
+            %\addlinespace[-0.2em]
+            %\strut \emph{(Heuristic)}
+               %& \emph{A*}
+               %& \emph{Lifelong Planning A*} \\
+            %\addlinespace[0.3em]
+            %\strut Bidirectional
+               %& Bidirectional Dijkstra
+               %& IBiD \\
+            %\addlinespace[-0.2em]
+            %\strut \emph{(Heuristic)}
+               %& \emph{Bidirectional A*}
+               %& \emph{Heuristic IBiD} \\
+            %\addlinespace[0.2em]
+            %\bottomrule
+         %\end{tabular}
+      %\end{minipage}};
 
-      \node[fill=blue!5,draw=blue!15,rounded corners] at (6,4) {\begin{minipage}{10cm}Key Insights:\end{minipage}};
+      %\node[fill=blue!5,draw=blue!15,rounded corners] at (6,4) {\begin{minipage}{10cm}Key Insights:\end{minipage}};
 
-      \node[fill=black!5,draw=black!15,rounded corners,
-         anchor=north,minimum width=3.0cm,minimum height=2.5cm] (trustblock) at (2.5,3.6) {};
-      \node[fill=white,rounded corners,inner sep=2pt,below=0.1cm of trustblock.north]
-         {\includegraphics[height=1.7cm]{build/ibid-dijkstra-trust-build,winctrust}};
-      \node[align=center,font=\footnotesize,anchor=south] at (trustblock.south) {Trust Regions};
+      %\node[fill=black!5,draw=black!15,rounded corners,
+         %anchor=north,minimum width=3.0cm,minimum height=2.5cm] (trustblock) at (2.5,3.6) {};
+      %\node[fill=white,rounded corners,inner sep=2pt,below=0.1cm of trustblock.north]
+         %{\includegraphics[height=1.7cm]{build/ibid-dijkstra-trust-build,winctrust}};
+      %\node[align=center,font=\footnotesize,anchor=south] at (trustblock.south) {Trust Regions};
 
-      \node[fill=black!5,draw=black!15,rounded corners,
-         anchor=north,minimum width=3.0cm,minimum height=2.5cm] (termblock) at (6.0,3.6) {};
-      \node[fill=white,rounded corners,inner sep=2pt,below=0.1cm of termblock.north]
-         {\includegraphics[height=1.5cm]{build/ibid-bidijkstra-viz-build,e}};
-      \node[align=center,font=\footnotesize,anchor=south] at (termblock.south) {Bidirectional\\Termination};
+      %\node[fill=black!5,draw=black!15,rounded corners,
+         %anchor=north,minimum width=3.0cm,minimum height=2.5cm] (termblock) at (6.0,3.6) {};
+      %\node[fill=white,rounded corners,inner sep=2pt,below=0.1cm of termblock.north]
+         %{\includegraphics[height=1.5cm]{build/ibid-bidijkstra-viz-build,e}};
+      %\node[align=center,font=\footnotesize,anchor=south] at (termblock.south) {Bidirectional\\Termination};
 
-      \node[fill=black!5,draw=black!15,rounded corners,
-         anchor=north,minimum width=3.0cm,minimum height=2.5cm] (potblock) at (9.5,3.6) {};
-      \node[fill=white,rounded corners,inner sep=2pt,below=0.1cm of potblock.north]
-         {\includegraphics[height=1.5cm]{build/ibid-potentials}};
-      \node[align=center,font=\footnotesize,anchor=south] at (potblock.south) {Potential\\Functions};
+      %\node[fill=black!5,draw=black!15,rounded corners,
+         %anchor=north,minimum width=3.0cm,minimum height=2.5cm] (potblock) at (9.5,3.6) {};
+      %\node[fill=white,rounded corners,inner sep=2pt,below=0.1cm of potblock.north]
+         %{\includegraphics[height=1.5cm]{build/ibid-potentials}};
+      %\node[align=center,font=\footnotesize,anchor=south] at (potblock.south) {Potential\\Functions};
 
-   \end{tikzpicture}
-\end{frame}
+   %\end{tikzpicture}
+%\end{frame}
