--- a/defense.tex
+++ b/defense.tex
@@ -50,8 +50,8 @@
 \southwest \pgf@xa=\pgf@x \pgf@ya=\pgf@y
 \northeast \pgf@xb=\pgf@x \pgf@yb=\pgf@y
 % compute corner of ‘‘flipped page’’
-\pgf@xc=\pgf@xb \advance\pgf@xc by-10pt % this should be a parameter
-\pgf@yc=\pgf@yb \advance\pgf@yc by-10pt
+\pgf@xc=\pgf@xb \advance\pgf@xc by-5pt % this should be a parameter
+\pgf@yc=\pgf@yb \advance\pgf@yc by-5pt
 % construct main path
 \pgfpathmoveto{\pgfpoint{\pgf@xa}{\pgf@ya}}
 \pgfpathlineto{\pgfpoint{\pgf@xa}{\pgf@yb}}
@@ -109,11 +109,11 @@
    %\end{columns}
 \end{frame}
 
-\input{defense-p0-intro}
+%\input{defense-p0-intro}
 
-\input{defense-p1-utility}
+%\input{defense-p1-utility}
 
-\input{defense-p2-lazysp}
+%\input{defense-p2-lazysp}
 
 \input{defense-p3-ibid}
 
@@ -129,7 +129,7 @@
 \end{frame}
 }
 
-\input{defense-p7-backup}
+%\input{defense-p7-backup}
 
 %\input{proptalk-backup}
 
