--- a/defense-p5-family.tex
+++ b/defense-p5-family.tex
@@ -23,7 +23,7 @@
    {$\arraycolsep=1.5pt \begin{array}{cl}
       x(\xi)\!: & \mbox{execution cost} \;(\mathcal{C}_{\ms{free}}) \\
       \hat{x}(\xi)\!: & \mbox{execution cost estimate} \\
-      \grave{p}(\xi)\!: & \mbox{planning cost estimate}
+      \hat{p}(\xi)\!: & \mbox{planning cost estimate}
    \end{array}$};
 
    \node[fill=black!2,draw=black!5,rounded corners,minimum width=5.0cm,minimum height=5.75cm,anchor=north] at (8.5,6.0)
@@ -37,7 +37,7 @@
       \end{center}%
       \vspace{-0.2cm}%
       A shortest path from $b_e$ of belief transitions
-      yields $\grave{p}(\xi)$.
+      yields $\hat{p}(\xi)$.
    \end{minipage}};
 
    \end{tikzpicture}
