--- a/figs/ibid-lazysp-plot.tex
+++ b/figs/ibid-lazysp-plot.tex
@@ -170,7 +170,7 @@ lambda meanpm
    ylabel={Total Search Time (s)},
    ylabel near ticks,
    ylabel shift=-0.2cm,
-   xlabel={LEMUR $\lambda_U$},
+   xlabel={LEMUR $\lambda$},
    legend pos=north west,
    x dir=reverse,
    %reverse legend,
