--- a/defense.tex
+++ b/defense.tex
@@ -1,7 +1,7 @@
 \documentclass[serif,10pt]{beamer}
 
 \def\gridopacity{100}
-%\def\gridopacity{0}
+\def\gridopacity{0}
 
 \usepackage{multimedia}
 
@@ -109,11 +109,11 @@
    %\end{columns}
 \end{frame}
 
-%\input{defense-p0-intro}
+\input{defense-p0-intro}
 
-%\input{defense-p1-utility}
+\input{defense-p1-utility}
 
-%\input{defense-p2-lazysp}
+\input{defense-p2-lazysp}
 
 \input{defense-p3-ibid}
 
@@ -129,7 +129,7 @@
 \end{frame}
 }
 
-%\input{defense-p7-backup}
+\input{defense-p7-backup}
 
 %\input{proptalk-backup}
 
